[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Vragen/Background.png" type="Texture" id=1]
[ext_resource path="res://Assets/Answer_Button_Unpressed.png" type="Texture" id=2]
[ext_resource path="res://Assets/Buttons/Answer_Button_Pressed.png" type="Texture" id=3]
[ext_resource path="res://Assets/Buttons/Answer_Button_Hover.png" type="Texture" id=4]
[ext_resource path="res://Assets/Pixelated Font Large.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/Pixelated Font Normal.tres" type="DynamicFont" id=6]
[ext_resource path="res://Vragen Scenes/Scripts/Multiple Choice.gd" type="Script" id=7]
[ext_resource path="res://Assets/Vragen/Red Cross.png" type="Texture" id=8]
[ext_resource path="res://Assets/Vragen/Green Check.png" type="Texture" id=9]
[ext_resource path="res://Player.tscn" type="PackedScene" id=10]
[ext_resource path="res://GlobalTimeLeft.gd" type="Script" id=11]
[ext_resource path="res://Timer.gd" type="Script" id=12]

[sub_resource type="Animation" id=1]
resource_name = "Correct"
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 2, 2 ), Vector2( 2, 2 ), Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Incorrect"
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 0.75, 0.75 ), Vector2( 0.75, 0.75 ), Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 7 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Time Left" type="Label" parent="CanvasLayer"]
margin_right = 100.0
margin_bottom = 20.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="CanvasLayer/Time Left"]
wait_time = 2700.0
autostart = true
script = ExtResource( 12 )

[node name="Player" parent="." instance=ExtResource( 10 )]
visible = false
position = Vector2( 512, 300 )

[node name="Control" type="Control" parent="."]
margin_left = 6.0
margin_top = 150.0
margin_right = 46.0
margin_bottom = 184.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vraag" type="Label" parent="Control"]
margin_left = 6.0
margin_top = -140.0
margin_right = 1006.0
margin_bottom = -10.0
custom_fonts/font = ExtResource( 5 )
text = "Wat is de kleur van de hemel?"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button 1" type="TextureButton" parent="Control"]
margin_left = 6.0
margin_right = 1000.0
margin_bottom = 40.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Antwoord 1" type="Label" parent="Control/Button 1"]
margin_right = 1000.0
margin_bottom = 140.0
custom_fonts/font = ExtResource( 6 )
text = "Blauw"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button 2" type="TextureButton" parent="Control"]
margin_left = 6.0
margin_top = 150.0
margin_right = 1000.0
margin_bottom = 289.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Antwoord 2" type="Label" parent="Control/Button 2"]
margin_right = 1000.0
margin_bottom = 140.0
custom_fonts/font = ExtResource( 6 )
text = "Groen"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button 3" type="TextureButton" parent="Control"]
margin_left = 6.0
margin_top = 300.0
margin_right = 1000.0
margin_bottom = 437.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Antwoord 3" type="Label" parent="Control/Button 3"]
margin_right = 1000.0
margin_bottom = 140.0
custom_fonts/font = ExtResource( 6 )
text = "Oranje"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512, 300 )
z_index = -1
texture = ExtResource( 1 )

[node name="Result" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Result"]
anims/Correct = SubResource( 1 )
anims/Incorrect = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="Control/Button 1" to="." method="_on_Button_1_pressed"]
[connection signal="pressed" from="Control/Button 2" to="." method="_on_Button_2_pressed"]
[connection signal="pressed" from="Control/Button 3" to="." method="_on_Button_3_pressed"]
[connection signal="animation_finished" from="Result/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
